--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -361,7 +361,7 @@ html, body {
   }
 
   // the div is the tocify hidden div for placeholding stuff
-  &>h1, &>h2, &>div {
+  &>h1, &>h2 {
     clear:both;
   }
 
@@ -386,7 +386,6 @@ html, body {
   h2 {
     @extend %header-font;
     font-size: 19px;
-    margin-top: 4em;
     margin-bottom: 0;
     border-top: 1px solid #ccc;
     padding-top: 1.2em;
@@ -501,6 +500,9 @@ html, body {
     background: $aside-notice-bg;
     color: $aside-notice-color;
     line-height: 1.6;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 
     &.warning {
       background-color: $aside-warning-bg;
@@ -521,6 +523,20 @@ html, body {
 
   aside.notice:before {
     @extend %icon-info-sign;
+  }
+
+  aside div.h3 {
+    font-weight: bold;
+    font-size: 15px;
+    display: inline-block;
+    margin-top: 0 !important;
+  }
+  aside code {
+    white-space: pre;
+  }
+
+  aside .object {
+    white-space: pre;
   }
 
   aside.warning:before {
@@ -770,3 +786,18 @@ html, body {
 ::placeholder {
   color: #fff
 }
+
+.table {
+  display: table;
+  .tr {
+    display: table-row;
+    .th, .td {
+      display: table-cell;
+      code {
+        white-space: nowrap;
+        color: #c7254e;
+      }
+    }
+  }
+}
+
