Update Resources to ShipSmart

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -28,7 +28,7 @@ $examples-bg: #2a373e !default;
 $code-bg: #2a373e !default;
 $code-annotation-bg: #1c1c1c !default;
 $nav-subitem-bg: #2a373e !default;
-$nav-active-bg: #50ce8f !default;
+$nav-active-bg: #a37857 !default;
 $nav-active-parent-bg: #1E2224 !default; // parent links of the current section
 $lang-select-border: #000 !default;
 $lang-select-bg: #222 !default;
